<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/list"
            android:title="@string/list"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/cart"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/language"
            android:title="@string/language"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_seller"
            android:icon="@drawable/seller"
            android:title="@string/seller"
            android:menuCategory="secondary"/>
    </group>
    <item
        android:menuCategory="secondary"
        android:title="@string/help_and_settings">

        <menu>
            <item
                android:id="@+id/nav_service"
                android:icon="@drawable/customerservice"
                android:menuCategory="secondary"
                android:title="@string/customer_service" />
            <item
                android:id="@+id/nav_policy"
                android:icon="@drawable/policy"
                android:menuCategory="secondary"
                android:title="@string/privacy_policy" />
        </menu>

    </item>
    <item
        android:id="@+id/nav_feedback"
        android:menuCategory="secondary"
        android:icon="@drawable/feedback"
        android:title="@string/send_your_feedback" />
</menu>